--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 *{
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #a7a2a2;
 
 
   margin: 0;
@@ -13,14 +13,32 @@
 }
 
 body {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
+  
+  margin: 0 20%;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h4{
+  font-size: 1rem;
+  color: rgb(56, 56, 56);
+}
+h3{
+  font-size: 1rem;
+  color: rgb(56, 56, 56);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a {
+  
+  color: rgb(56, 56, 56);
 }
