--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #a7a2a2;
-
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -17,9 +13,15 @@ body {
   align-items: center;
   justify-content: center;
   min-width: 320px;
-  min-height: 100vh; */
+  min-height: 100vh; 
+  background-color: #a7a2a2;
+  */
   
-  margin: 0 20%;
+  margin: 0 10%;
+}
+
+li{
+  margin-right: 1rem;
 }
 
 h1 {
@@ -39,6 +41,5 @@ h3{
 }
 
 a {
-  
   color: rgb(56, 56, 56);
 }
